[package]
name = "size_guess"
version = "0.1.0"
edition = "2021"
description = "Provides a size guess for iterators."
repository = "https://github.com/MaxMahem/size_guess"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
